Updated link to repo

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
         <h1 class="logo">Simularea curcubeului secundar</h1>
         <p class="sub-logo">
-            Sub licență GNU :: <a href="https://bitbucket.org/IonicaBizau/simularea-curcubeului-secundar/">Click aici pentru a vedea codul sursă</a>
+            Sub licență GPL v3: <a href="https://github.com/PhysicsProjects/Secondary-rainbow">Click aici pentru a vedea codul sursă</a>
         </p>
 
         <button class="btn btn-primary btn-start btn-large"><i class="icon-play icon-white"></i> Start</button>
