--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
         <script src="main.js"></script>
         <link href="style.css" rel="stylesheet" />
     </head>
-<body>
-    <div align="center" id="container">
+<body >
+    <div style="align-items: center; text-align: center; padding:30px;" id="container">
 
         <h1 class="logo">Simularea curcubeului secundar</h1>
         <p class="sub-logo">
@@ -18,12 +18,12 @@
         <button class="btn btn-primary btn-start btn-large"><i class="icon-play icon-white"></i> Start</button>
         <button class="btn btn-danger btn-reset btn-large"><i class="icon-remove-sign icon-white"></i> Resetează</button>
 
-        <br />
-
-        <div class="main">
+     
+       
+        <div class="main" style="padding: 50px;">
            <div class="bordered bg"></div>
 
-            <img class="hidden" id="sun" src="img/sun.png">
+            <img class="hidden" id="sun" src="img/sun.png" style="padding: 25px; margin-top: 5px;margin-left: 60px;">
 
             <div class="line hidden" id="firstRay" style="background-color: white;
                                                          -webkit-transform: rotateZ(35deg);
