--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
         <p class="sub-logo">
             Sub licență MIT: <a href="https://github.com/PhysicsProjects/Secondary-rainbow">Click aici pentru a vedea codul sursă</a>
         </p>
-
+        <div class="btn">
         <button class="btn btn-primary btn-start btn-large"><i class="icon-play icon-white"></i> Start</button>
         <button class="btn btn-danger btn-reset btn-large"><i class="icon-remove-sign icon-white"></i> Resetează</button>
-
+        </div>  
         <br />
 
         <div class="main">
